--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </li>
         </ul>
 
-        <img src="https://www.kasandbox.org/programming-images/cute/Heart.png">
+       <a target="_blank" href="https://www.starfall.com/h/"> <img src="https://www.kasandbox.org/programming-images/cute/Heart.png"> </a> 
         
     </body>
 </html>
